--- a/demo/index.html
+++ b/demo/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
-    <title>navigation-menu demo</title>
-
     <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+
+    <title>Navigation Menu Demo</title>
+    <link rel="import" href="../bower_components/polymer/polymer.html">
+
+    <link rel="import" href="../bower_components/iron-demo-helpers/url-bar.html">
+    <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 
     <link rel="import" href="../bower_components/iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../bower_components/iron-demo-helpers/demo-snippet.html">
@@ -16,13 +19,67 @@
     </style>
   </head>
   <body>
-    <div class="vertical-section-container centered">
-      <h3>Basic navigation-menu demo</h3>
-      <demo-snippet>
-        <template>
-          <navigation-menu></navigation-menu>
-        </template>
-      </demo-snippet>
-    </div>
+    <url-bar></url-bar>
+
+  <dom-module id="navigation-menu-demo1">
+    <style>
+      :host {
+        display: block;
+        position: relative;
+        height: 100vh;
+        @apply(--paper-font-common-base);
+      }
+      :host([video-page-active]) {
+        overflow: hidden;
+      }
+      :host([video-page-active]) iron-pages {
+        transform: translateY(-170px);
+      }
+      iron-pages {
+        transition: transform 0.3s;
+      }
+    </style>
+    <template>
+      <app-location route="{{route}}" use-hash-as-path></app-location>
+      <navigation-menu id="nav" route="{{route}}" current-request="{{currentRequest}}" current-request-data="{{requestData}}" current-subrequest="{{subpage}}">
+      <div id="header">Header goes here!</div>
+
+      <div id="before">
+        <div class="menu-item selectable" data-route="item_before" title="Tool Tip for first item">
+          <iron-icon icon="diamond"></iron-icon>
+          <span>First Item</span>
+        </div>
+      </div>
+      <div id="after">
+        <div class="menu-item selectable" data-route="item_after" title="Tool Tip for last item">
+          <iron-icon icon="diamond"></iron-icon>
+          <span>Last Item</span>
+        </div>
+      </div>
+      <div id="footer">This is a footer!</div>
+
+      </navigation-menu>
+      <div>Request: <span>[[currentRequest.page]]</span></div>
+      <div>RequestData: <span>[[requestData]]</span></div>
+      <div>SubPage: <span>[[subpage]]</span></div>
+    </template>
+    <script>
+      window.addEventListener('WebComponentsReady', function() {
+
+        Polymer({
+          is: 'navigation-menu-demo1',
+          properties: {
+          },
+          ready: function(){
+            if (!this.route.path) {
+              this.set('route.path', '/home');
+            }
+          }
+        });
+       });
+    </script>
+  </dom-module>
+  <navigation-menu-demo1></navigation-menu-demo1>
+
   </body>
 </html>
