--- a/navigation-menu.html
+++ b/navigation-menu.html
@@ -1,9 +1,9 @@
-<link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="bower_components/paper-styles/typography.html">
-<link rel="import" href="bower_components/app-route/app-location.html">
-<link rel="import" href="bower_components/app-route/app-route.html">
-<link rel="import" href="bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="bower_components/iron-icon/iron-icon.html">
+<!--<link rel="import" href="../polymer/polymer.html">-->
+<link rel="import" href="../paper-styles/typography.html">
+<link rel="import" href="../app-route/app-location.html">
+<link rel="import" href="../app-route/app-route.html">
+<link rel="import" href="../paper-menu/paper-menu.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
 
 <!--
 `navigation-menu`
